[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/ui/Arrow Right.png" type="Texture" id=1]
[ext_resource path="res://sprites/ui/PanelBrown.png" type="Texture" id=2]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/ui/PanelBeige.png" type="Texture" id=4]
[ext_resource path="res://ui/dialogue/Dialogue.gd" type="Script" id=5]




[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 22.0
margin_right = 41.0
margin_top = 34.0
margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 30.0
margin_right = 24.0
margin_top = 31.0
margin_bottom = 26.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "move_arrow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 565.453, 96.0945 ), Vector2( 560, 96.094 ), Vector2( 565.453, 96.0945 ) ]
}

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/PanelBrown.png-3b5e42cd0f804351b4d832839e81b510.stex"

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 8.0
margin_right = 29.0
margin_top = 21.0
margin_bottom = 19.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 8.0
margin_right = 29.0
margin_top = 21.0
margin_bottom = 19.0

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 3 )

[node name="Dialogue" type="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -130.0
margin_right = 300.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )

[node name="Name" type="Panel" parent="."]
editor/display_folded = true
margin_left = 20.0
margin_top = -20.0
margin_right = 160.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Name"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Clean Booga"
align = 1
valign = 1

[node name="DialogueText" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.0
margin_top = 27.0
margin_right = -55.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -14
autowrap = true

[node name="GridContainer" type="GridContainer" parent="DialogueText"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.7542
margin_right = 499.0
margin_bottom = 77.2458
columns = 4

[node name="Button" type="TextureButton" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 565.453
margin_top = 96.0945
margin_right = -12.5471
margin_bottom = -12.9055
texture_normal = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_arrow = SubResource( 5 )

[node name="QuestAccept" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -449.19
margin_right = 150.0
margin_bottom = -99.1902
custom_styles/panel = SubResource( 7 )

[node name="Name" type="Panel" parent="QuestAccept"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.0
margin_top = -16.0
margin_right = 128.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="QuestAccept/Name"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Slay The Gators"
align = 1
valign = 1

[node name="Objectives" type="Panel" parent="QuestAccept"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.0
margin_top = 41.6176
margin_right = 128.0
margin_bottom = 186.618
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="QuestAccept/Objectives"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objectives
- Slay 5 Gators"
align = 1

[node name="Reward" type="Panel" parent="QuestAccept"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -127.0
margin_top = -150.77
margin_right = 128.0
margin_bottom = -75.7704
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="QuestAccept/Reward"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reward
100 Cash / 50 EXP"
align = 1

[node name="QuestYes" type="Button" parent="QuestAccept"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -65.0
margin_right = -20.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 11 )
text = "Yes"

[node name="QuestNo" type="Button" parent="QuestAccept"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -65.0
margin_right = 120.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 11 )
text = "No"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="QuestAccept/QuestYes" to="." method="_on_QuestYes_pressed"]
[connection signal="pressed" from="QuestAccept/QuestNo" to="." method="_on_QuestNo_pressed"]
